--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -49,24 +49,55 @@ table {
 
 
 /* 
-  Turn everything into border-box mode
+  General
 */
 *, *:before, *:after {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   -box-sizing: border-box;
-  /* Useful for debugging: border: 1px solid red !important; */  
-
+  /* Useful for debugging: border: 1px solid red !important; */ 
 }
 
 .container {
   margin: 0 auto;
   width: 960px;
+  background: #fff;
 }
 
+.row {
+  min-width: 960px;
+  background: #120020;
+  color: #fff;
+  text-align: center;
+}
+
+.body {
+  min-height: 400px;
+
+  /* HACK to center placeholder text */
+  display: table; 
+}
+
+p {
+  font: 200 40px/40px "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: #120020;
+  letter-spacing: -3px;
+  text-transform: lowercase;
+
+  /* HACKS to center placeholder text */
+  vertical-align: middle;
+  display: table-cell; 
+}
+
+
+
 /* 
-  Logo
+  Header
 */
+.primary-header {
+  padding-top: 22px;
+}
+
 .logo {
   font: 200 44px/44px "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
   float: none;
@@ -79,66 +110,103 @@ table {
   text-decoration: none;
 }
 .logo a:link {
-  color: #0F001C;
+  color: #120020;
 }
 .logo a:visited {
-  color: #0F001C;
+  color: #120020;
 }
 .logo a:hover {
-  color: #FF1117;
+  color: #ed2424;
 }
 .logo a:active {
-  color: #0F001C;
+  color: #120020;
 }
 
-/* 
-  Navigation
-*/
 .nav {
-  margin: 0;
-  padding: 0;
-  display: inline-block;
+  margin-top: 20px;
   float: right;
   text-align: right;
-  padding-top: 12px;
+
 }
 .nav li {
   font: 300 16px/16px "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
   display: inline-block;
   letter-spacing: -2px;
-  padding: 0 5px;
+  padding: 0 5px 2px 5px;
+  border-bottom: 1px solid #120020;
+  border-top: 1px solid #120020;
+}
+.active-nav-item a {
+  font-weight: 500;
 }
 .nav a {
   text-decoration: none;
   text-transform: lowercase;
 }
 .nav a:link {
-  color: #0F001C;
+  color: #120020;
 }
 .nav a:visited {
-  color: #0F001C;
+  color: #120020;
 }
 .nav a:hover {
-  color: #FF1117;
+  color: #ed2424;
 }
 .nav a:active {
-  color: #0F001C;
+  color: #120020;
 }
 
-p {
-  font: 200 30px/30px "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  letter-spacing: -3px;
-}
 
-.row {
-  min-width: 960px;
-  background: #000;
-  color: #fff;
-  text-align: center;
-  padding: 50px;
+/* 
+  Footer
+*/
+footer {
+  font: 300 16px/16px "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  letter-spacing: -2px;
+  text-transform: lowercase;
 }
-
-small {
-  font: 400 12px/12px "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
+footer .copywrite { 
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 12px; 
   font-style: italic;
+  letter-spacing: -1px;
+  vertical-align: top;
 }
+footer .social-media {
+  float: right;
+  text-align: right;
+  word-spacing: 2px;
+}
+footer .social-media small {
+  font-weight: 100;
+  letter-spacing: -1px;
+}
+footer a:link, footer a:visited, footer a:hover, footer a:active {
+  text-decoration: none;
+}
+footer a:link {
+  color: #120020;
+}
+footer a:visited {
+  color: #120020;
+}
+footer a:hover {
+  color: #ed2424;
+}
+footer a:active {
+  color: #120020;
+}
+
+
+
+/*
+  Image Grid
+  (For displaying a grid of pictures as a navigation menu)
+*/
+.image-grid img {
+  width: 400px;
+  height: 400px;
+  padding: 0 2px;
+}
+
