--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -64,16 +64,40 @@ table {
   background: #fff;
 }
 
-p {
-  font: 200 40px/40px "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: #120020;
-  letter-spacing: -3px;
-  text-transform: lowercase;
-  text-align: center;
-
-  /* HACK to center placeholder text */
-  line-height: 180px;
+.col-left {
+  width: 75%;
+  display: inline-block;
+  padding: 25px 0 30px 0;
 }
+.col-left p:first-child {
+  margin-top: 0px;
+}
+.col-left p:last-child {
+  margin-bottom: 0px;
+}
+
+.col-right {
+  width: 25%;
+  height: 100%;
+  display: inline-block;
+}
+.col-right img {
+  width: 200px;
+  display: block;
+  margin-left: auto;
+  vertical-align: middle;
+  padding-bottom: 5px; /* Because of extra bottom padding on col-left */
+}
+
+
+p {
+  font: 200 25px/25px "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: #000000;
+  letter-spacing: -1px;
+  text-align: justify;
+  margin: 15px 0;
+}
+
 
 
 
