--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -89,6 +89,84 @@ table {
   padding-bottom: 5px; /* Because of extra bottom padding on col-left */
 }
 
+.col-1-2 {
+  width: 50%;
+  display: inline-block;
+  padding-top: 10px;
+}
+.left {
+  padding-right: 5px;
+}
+.right {
+  padding-left: 5px;
+}
+.col-1-2 img {
+  width: 100%;
+  vertical-align: top;
+}
+
+
+.col-center {
+  width: 75%;
+  display: block;
+  margin: 0 auto;
+}
+.col-center p {
+  font-size: 20px;
+  line-height: 20px;
+  letter-spacing: 0px;
+  text-align: justify;
+  font-weight: 300;
+  margin: 0 0 10px 0;
+}
+h2 {
+  font: 100 44px/44px "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  display: inline-block;
+  letter-spacing: -5px;
+  text-transform: lowercase;
+  padding: 15px 0;
+  display: inline-block;
+}
+.project-header {
+  position: relative;
+  width: 100%;
+  padding: 15px 0;
+}
+.project-header span {
+  font: 100 44px/44px "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  text-transform: lowercase;
+  letter-spacing: -5px;
+  display: inline-block;
+}
+.project-header .title {
+  text-align: left;
+}
+.project-header .source-code {
+  font-size: 25px;
+  line-height: 25px;
+  letter-spacing: -3px;
+  text-align: right;
+  position: absolute;
+  right: 0px;
+  bottom: 17px; /* Hack for now to align to baseline of title */
+}
+.project-header a:link, footer a:visited, footer a:hover, footer a:active {
+  text-decoration: none;
+}
+.project-header a:link {
+  color: #120020;
+}
+.project-header a:visited {
+  color: #120020;
+}
+.project-header a:hover {
+  color: #ed2424;
+}
+.project-header a:active {
+  color: #120020;
+}
+
+
 
 p {
   font: 100 25px/25px "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -97,8 +175,6 @@ p {
   text-align: justify;
   margin: 15px 0;
 }
-
-
 
 
 /* 
