--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -67,7 +67,17 @@ table {
 .col-left {
   width: 75%;
   display: inline-block;
-  padding: 25px 0 30px 0;
+}
+.col-left .outer {
+  display: table;
+  height: 200px;
+}
+.col-left .inner {
+  display: table-cell;
+  vertical-align: middle;
+}
+.col-left .element {
+  display: block;
 }
 .col-left p:first-child {
   margin-top: 0px;
@@ -79,6 +89,7 @@ table {
 .col-right {
   width: 25%;
   height: 100%;
+  height: 200px;
   display: inline-block;
 }
 .col-right img {
@@ -86,7 +97,6 @@ table {
   display: block;
   margin-left: auto;
   vertical-align: middle;
-  padding-bottom: 5px; /* Because of extra bottom padding on col-left */
 }
 
 .col-1-2 {
