--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -164,6 +164,22 @@ h2 {
   right: 0px;
   bottom: 17px; /* Hack for now to align to baseline of title */
 }
+.source-code a:link, .source-code a:visited, .source-code a:hover, .source-code a:active {
+  text-decoration: none;
+  border-bottom: none;
+}
+.source-code a:link {
+  color: #120020;
+}
+.source-code a:visited {
+  color: #120020;
+}
+.source-code a:hover {
+  color: #F73F05;
+}
+.source-code a:active {
+  color: #120020;
+}
 
 .project-description {
   padding-bottom: 10px;
@@ -181,6 +197,7 @@ a:link, a:visited, a:hover, a:active {
 a:hover {
   border-bottom: none;
 }
+
 
 
 p {
