Add font awesome to stylesheets

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,6 +1,8 @@
 @import "fonts";
 @import "variables";
 
+$fa-font-path: "fonts/";
+@import "font-awesome";
 @import "bootstrap";
 
 @import "scrollbar";
