--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -7,4 +7,4 @@ $fa-font-path: "fonts/";
 
 @import "scrollbar";
 @import "navbar";
-@import "portfolio-grid";
+@import "portfolio-grid";@import "about";
