--- a/src/sass/_fonts.scss
+++ b/src/sass/_fonts.scss
@@ -14,5 +14,6 @@
   font-style: normal;
 }
 
-@import url(https://fonts.googleapis.com/css?family=Josefin+Sans:400,100,100italic,300,300italic,400italic,600,600italic,700,700italic);
-@import url(https://fonts.googleapis.com/css?family=Cabin:400,500,400italic,500italic,600,600italic,700,700italic);
+// @import url(https://fonts.googleapis.com/css?family=Josefin+Sans:400,100,100italic,300,300italic,400italic,600,600italic,700,700italic);
+// @import url(https://fonts.googleapis.com/css?family=Lato:400,100,100italic,300,300italic,400italic,700,700italic,900,900italic);
+@import url(https://fonts.googleapis.com/css?family=Raleway:400,900italic,900,800italic,800,700,600italic,700italic,600,500italic,500,400italic,300italic,300,200italic,200,100italic,100);
