Add color options for later

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,7 +1,12 @@
 // -- CUSTOM VARIABLES ---------------------------------------------------------
 
 // Colors
-$deep-purple: rgb(162, 0, 172);
+$deep-purple: hsl(297, 100%, 34%);
+$dark-blue: hsl(196, 100%, 37%);
+$dark-yellow: hsl(57, 100%, 43%);
+$fire-orange: hsl(25, 100%, 42%);
+$red-pink: hsl(344, 98%, 60%);
+$bright-green: hsl(172, 100%, 41%);
 
 // Font stacks
 $big-john-font-stack: 'Big John', sans-serif;
