Add some breakpoint mixins

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -5,6 +5,7 @@ $fa-font-path: "fonts/";
 @import "font-awesome";
 @import "bootstrap";
 
+@import "mixins";
 @import "scrollbar";
 @import "navbar";
 @import "portfolio-grid";@import "about";@import "contact";
