Add footer styling

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -18,6 +18,8 @@ $cabin-font-stack: 'Cabin', sans-serif;
 // $cabin-font-stack: 'Cabin', sans-serif;
 $raleway-font-stack: 'Raleway', sans-serif;
 
+// Footer
+$footer-height: 65px;
 
 
 // -- OVERRIDING BOOTSTRAP VARIABLES -------------------------------------------
