--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -8,4 +8,4 @@ $fa-font-path: "fonts/";
 @import "mixins";
 @import "scrollbar";
 @import "navbar";
-@import "portfolio-grid";@import "about";@import "contact";
+@import "portfolio-grid";@import "about";@import "contact";@import "footer";
