--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -19,4 +19,4 @@ body {
 
 @import "scrollbar";
 @import "navbar";
-@import "portfolio-grid";@import "about";@import "contact";@import "footer";
+@import "portfolio-grid";@import "about";@import "contact";@import "footer";@import "project-page";
