--- a/src/sass/_project-page.scss
+++ b/src/sass/_project-page.scss
@@ -125,7 +125,7 @@ $section-spacing: 50px;
         img {
             width: 100%;
             height: 100%;
-            object-fit: cover;
+            @include object-fit(cover);
         }
     }
 
@@ -141,7 +141,7 @@ $section-spacing: 50px;
             opacity: 0.5;
             width: 100px;
             height: 100px;
-            object-fit: cover;
+            @include object-fit(cover);
             transition: opacity 0.2s ease-in-out; 
             cursor: pointer;
             
