Only passing in large image to galleries in jade

--- a/src/projects/msp-game-design.jade
+++ b/src/projects/msp-game-design.jade
@@ -18,8 +18,8 @@ block variables
             "working-2-large.jpg",
             "storyboard-1-large.jpg",
             "photoshop-1-large.jpg",
-            "stencyl-1-original.jpg",
-            "stencyl-3-original.jpg",
+            "stencyl-1-large.jpg",
+            "stencyl-3-large.jpg",
             "presentation-1-large.jpg",
             "final-exhibit-2-large.jpg",
             "final-exhibit-1-large.jpg"
