--- a/src/projects/ofbook.jade
+++ b/src/projects/ofbook.jade
@@ -13,11 +13,11 @@ block variables
             "Tags: Teaching"
         ];
         var projectImageNames = [
-            "tangents-original.jpg",
+            "tangents-large.jpg",
             "intro-screenshot-large.jpg",
             "meshes-screenshot-large.jpg",
-            "rotating-original.jpg",
-            "editing-vectors-original.jpg"
+            "rotating-large.jpg",
+            "editing-vectors-large.jpg"
         ];
 
 block projectDescription
