Make navbar a little nicer on mobile
- Auto-close
- Center links
- Underline only as long as link

--- a/src/jade-layouts/_basic-page.jade
+++ b/src/jade-layouts/_basic-page.jade
@@ -13,8 +13,8 @@ block nav
           a.navbar-brand(href="/index.html") mikewesthad
 
         // Collect the nav links, forms, and other content for toggling
-        .collapse.navbar-collapse
-          ul#main-nav.nav.navbar-nav.navbar-right
+        #main-nav.collapse.navbar-collapse
+          ul.nav.navbar-nav.navbar-right
             li
               a#about-link(href="/index.html") About
                 .nav-underline
