--- a/src/sass/_portfolio.scss
+++ b/src/sass/_portfolio.scss
@@ -16,6 +16,7 @@
                 margin: 0;
                 
                 a {
+                    outline: none;
                     margin: 0 5px;
                     padding: 5px 10px;
                     border-radius: 3px;
