Remove target blank

--- a/src/projects/codeabode-website.jade
+++ b/src/projects/codeabode-website.jade
@@ -22,7 +22,7 @@ block variables
 
 block projectDescription
     +titledSection("Overview") 
-        p In collaboration with #[a(href="//rextwedt.com", target="_blank") Rex Twedt], I designed and implemented a modern, responsive website for CodeAbode, a Chicago-based, not-for-profit code school.
+        p In collaboration with #[a(href="//rextwedt.com") Rex Twedt], I designed and implemented a modern, responsive website for CodeAbode, a Chicago-based, not-for-profit code school.
 
         p A live version of the design is hosted #[a(href="//codeabodechicago.github.io/CodeAbode-Website") here].
 
