--- a/src/jade-layouts/_project-page.jade
+++ b/src/jade-layouts/_project-page.jade
@@ -36,7 +36,5 @@ block content
                         var basePath = projectImagePath + baseFile.join("-");
                         var thumbnailPath = basePath + "-small." + fileInfo[1];
                         var largePath = basePath + "-large." + fileInfo[1];
-                        var originalPath = basePath + "-original." + fileInfo[1];
-                    img(src=thumbnailPath, data-large-path=largePath,
-                        data-original-path=originalPath)
+                    img(src=thumbnailPath, data-large-path=largePath)
         block projectDescription
