--- a/src/sass/_project-page.scss
+++ b/src/sass/_project-page.scss
@@ -31,36 +31,40 @@ $section-spacing: 50px;
             }
         }
     }
-
+    
     .demo-link {
-        position: relative;
-        display: inline-block;
-        
-        .overlay {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            background: rgba(0,0,0,0);
-            transition: background-color 0.3s ease-in-out; 
-                        
-            .fa {
-                position: absolute;
-                transform: translate(-50%, -50%);
-                top: 50%;
-                left: 50%;
-                color: white;
-                font-size: 70px;
-                opacity: 0;
-                transition: opacity 0.3s ease-in-out; 
-            }
-        }        
+        text-align: center;
 
-        &:hover {            
+        a {
+            position: relative;
+            display: inline-block;
+            
             .overlay {
-                background: rgba(0,0,0,0.5);
-
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                background: rgba(0,0,0,0);
+                transition: background-color 0.3s ease-in-out; 
+                            
                 .fa {
-                    opacity: 1;
+                    position: absolute;
+                    transform: translate(-50%, -50%);
+                    top: 50%;
+                    left: 50%;
+                    color: white;
+                    font-size: 70px;
+                    opacity: 0;
+                    transition: opacity 0.3s ease-in-out; 
+                }
+            }        
+
+            &:hover {            
+                .overlay {
+                    background: rgba(0,0,0,0.5);
+
+                    .fa {
+                        opacity: 1;
+                    }
                 }
             }
         }
