Updating pages to use new page template

--- a/src/projects/blink.jade
+++ b/src/projects/blink.jade
@@ -20,6 +20,9 @@ block variables
 
 
 block projectDescription
+
+    +gallery(projectImagePath, projectImageNames)
+    
     +titledSection("Overview")
         p Blink is an experimental game that puts the player into a body in a forest clearing. The only thing they can do is look around and try to figure out what is happening.
         p The piece was shown during the 2013 Basement Dwellers show at the School of the Art Institute. A downloadable version of the game is available <a href="//gamejolt.com/games/blink/18933">here</a>. 
