--- a/src/projects/gratuitous-gram.jade
+++ b/src/projects/gratuitous-gram.jade
@@ -22,6 +22,9 @@ block variables
         ];
 
 block projectDescription
+
+    +gallery(projectImagePath, projectImageNames)
+    
     +titledSection("Overview") 
         p The Gratuitous Gram is a food tent installation where visitors are invited to reconstruct iconic meals using nutrition labels as recipes. We provide raw ingredients for the big three macronutrients: shortening for fats, sugar for carbohydrates, and protein powder for protein. While techically edible, the resulting dishes were far from appetizing and highlight how little information the nutrition label provides. For more information, see the project's <a href="//gratuitousgram.wordpress.com/">website</a>.
 
