--- a/src/projects/msp-game-design.jade
+++ b/src/projects/msp-game-design.jade
@@ -26,6 +26,9 @@ block variables
         ];
 
 block projectDescription
+
+    +gallery(projectImagePath, projectImageNames)
+    
     +titledSection("Overview") 
         p I designed and taught a middle school game design camp with #[a(href="//kaylalewis.net") Kayla Lewis] at the School of the Art Institute (SAIC). See the course #[a(href="//www.mspgamedesign.com/index.html") website] for more details and live versions of student projects.
 
