--- a/src/projects/natural-symmetries.jade
+++ b/src/projects/natural-symmetries.jade
@@ -23,6 +23,9 @@ block variables
         ];
 
 block projectDescription
+
+    +gallery(projectImagePath, projectImageNames)
+
     +titledSection("Overview") 
         p Natural Symmetries takes images of the natural world and spins them into manadalas.
         p Source imagery: #[a(href="//www.flickr.com/photos/34022876@N06/3434623631") HDR Sunset, Costa Rica], #[a(href="//www.flickr.com/photos/90509736@N05/8552198245/in/photolist-e2JfzT") HDR].
