--- a/src/projects/ofbook.jade
+++ b/src/projects/ofbook.jade
@@ -21,6 +21,9 @@ block variables
         ];
 
 block projectDescription
+
+    +gallery(projectImagePath, projectImageNames)
+    
     +titledSection("Overview") 
         p ofBook is an open source book about creative coding in C++ using the #[a(href="//openframeworks.cc") openFrameworks] library. It covers everything from getting started to iOS applications to game design. ofBook is available online as a web book #[a(href="//openframeworks.cc/ofBook/chapters/foreword.html") here].
 
