--- a/src/projects/promise-foods.jade
+++ b/src/projects/promise-foods.jade
@@ -24,6 +24,9 @@ block variables
         ];
 
 block projectDescription
+
+    +gallery(projectImagePath, projectImageNames)
+    
     +titledSection("Overview") 
         p The Promise Apple&reg; is an apple that combines all the benefits of your morning cup of coffee with the natural power of locally grown apples. 
 
