--- a/src/projects/public-insecurities.jade
+++ b/src/projects/public-insecurities.jade
@@ -19,6 +19,9 @@ block variables
         ];
 
 block projectDescription
+
+    +gallery(projectImagePath, projectImageNames)
+    
     +titledSection("Overview") 
         p Public Insecurities is about insecurities pulled from Google's search &ldquo;suggestions&rdquo; &mdash; the search completions that drop down from the search bar as you type. These suggestions come from private searches, recorded by Google, which are anonymized and re-presented to us. By typing a few, charged words into a search bar, expressions of collective, private insecurities can be uncovered. 
 
