--- a/src/projects/render-sketch-game.jade
+++ b/src/projects/render-sketch-game.jade
@@ -23,6 +23,9 @@ block variables
         ];
 
 block projectDescription
+
+    +gallery(projectImagePath, projectImageNames)
+    
     +titledSection("Overview")
         p Render Sketch Game was started by #[a(href="//twitter.com/ryangreen8/status/464796635424641024") Ryan Green]. 3D modeling can be tedious &amp; detail-oriented, so the idea is to borrow from #[a(href="//en.wikipedia.org/wiki/Gesture_drawing") gesture drawing]: set a 10 minute timer and sketch until time is up.
 
