--- a/src/projects/video-collapse.jade
+++ b/src/projects/video-collapse.jade
@@ -20,6 +20,9 @@ block variables
         ];
 
 block projectDescription
+
+    +gallery(projectImagePath, projectImageNames)
+    
     +titledSection("Overview") 
         p Video Collapse takes short scenes from film and collapses them into a single abstract representation of everything that happened in that scene.
         p Source videos: #[a(href="//vimeo.com/77111226") Shake], #[a(href="//www.youtube.com/watch?v=OiTiKOy59o4") Gravity].
