--- a/src/projects/view-history.jade
+++ b/src/projects/view-history.jade
@@ -25,6 +25,9 @@ block variables
         ];
 
 block projectDescription
+
+    +gallery(projectImagePath, projectImageNames)
+    
     +titledSection("Overview") 
         p [View History] reveals the evolution of a controversial Wikipedia article &mdash; &ldquo;#[a(href="https://en.wikipedia.org/wiki/Global_warming") Global Warming]&rdquo; &mdash; in two ways: through the chronology of edits and through discussions between editors.
         p We think of Wikipedia pages as static articles rather than as dynamic, evolving documents. We don&rsquo;t reread articles looking for how they have changed since our last visit. Even though the revision history is publicly available, it is effectively hidden to readers. [View History] explores that hidden history, bringing it from the background to the foreground.
