Small text and image tweaks

--- a/src/projects/codeabode-teaching.jade
+++ b/src/projects/codeabode-teaching.jade
@@ -71,12 +71,12 @@ block projectDescription
                 li Server-Side Programming (Node.js)
                 li Capstone Projects
 
-        p Note: I designed all the classes except for HTML/CSS. A breakdown of the individual courses is hosted online #[a(href="//codeabodechicago.github.io/CodeAbode-Website/curriculum.html") here].
+        p A breakdown of the individual courses is hosted online #[a(href="//codeabodechicago.github.io/CodeAbode-Website/curriculum.html") here].
 
     +titledSection("Teaching Philosophy")
         p My classes were focused on teaching students how to problem solve and how to teach themselves, through hands-on demonstrations and assignments that guided students through the fundamental concepts. The goal was not to memorize a specific syntax, but rather to learn how to think and problem solve with code.
 
-        p Example assignments and exercises below.
+        p Example assignments and exercises below. Note: not all of these exercises are mobile-friendly.
     
     .row.demo-grid
         each imageName, index in demoImages
